# ncnc

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
ncnc/: c_value.py  nc_value.py
tests/: sample.csv  test_c_value.py  test_nc_value.py
